# ParallelSTL

./: CMakeLists.txt  README.md  stopwatch.h  testdatagenerators.hpp  trash.cpp.txt
gcc/: CMakeLists.txt  for_each.cpp  sort.cpp
hpx/: CMakeLists.txt  exception_handling.cpp  for_each.cpp  sort.cpp
t-lutz/: CMakeLists.txt  for_each.cpp  sort.cpp
